[tool.poetry]
name = "gcloud-common-utils"
version = "0.5.0"  # Bumped for metadata feature
description = "Common utilities to interact with gcloud, focused on google storage and google pubsub"
authors = [""]
readme = "README.md"
packages = [{include = "gcloud_common_utils", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
google-cloud-storage = ">=1.22.0"
google-cloud-pubsub = ">2.0.0"
typeguard = ">=2.6.0,<3.0.0"
nivacloud-logging = ">=0.8.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
